--- a/product.html
+++ b/product.html
@@ -1,17 +1,100 @@
-<script>
-  // Get product IDs from URL
-  const params = new URLSearchParams(window.location.search);
-  const products = params.get('products'); // e.g., "5,2,3"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Product Page</title>
+<style>
+  body { font-family: Arial, sans-serif; margin: 0; background: #f6f6f6; }
+  .header { position: sticky; top: 0; background: #fff; padding: 10px; display: flex; align-items: center; gap: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+  .logo { font-weight: bold; }
+  .cart { position: relative; }
+  #cart-count { position: absolute; top: -5px; right: -5px; background: #f1641e; color: #fff; border-radius: 50%; padding: 2px 6px; font-size: 12px; }
+  .product-container { max-width: 800px; margin: 20px auto; background: #fff; padding: 20px; border-radius: 8px; display: flex; gap: 20px; flex-wrap: wrap; }
+  .product-image { flex: 1; min-width: 250px; }
+  .product-image img { width: 100%; border-radius: 8px; }
+  .product-info { flex: 2; min-width: 250px; }
+  .product-info h1 { margin-top: 0; }
+  .product-info p { line-height: 1.5; }
+  .btn { padding: 10px 15px; margin-top: 10px; background: #f1641e; color: #fff; border: none; border-radius: 6px; cursor: pointer; }
+</style>
+</head>
+<body>
 
-  if (products) {
-    const ids = products.split(',');
-    ids.forEach(productId => {
-      const link = document.createElement('a');
-      link.href = `http://localhost:4000/download/${productId}`;
-      link.download = '';
-      document.body.appendChild(link);
-      link.click();
-      link.remove();
-    });
+<header class="header">
+  <a href="index.html" class="logo">DjsDopeDesigns</a>
+  <a href="cart.html" class="cart">🛒 <span id="cart-count">0</span></a>
+</header>
+
+<div class="product-container" id="product-container">
+  <!-- Product content will be rendered here -->
+</div>
+
+<script>
+let allProducts = [];
+
+// Load products.json to get product info
+fetch('products.json')
+  .then(res => res.json())
+  .then(products => {
+    allProducts = products;
+    renderProduct();
+  });
+
+function renderProduct() {
+  const params = new URLSearchParams(window.location.search);
+  const id = params.get('id');
+  const product = allProducts.find(p => p.id === id);
+
+  if (!product) {
+    document.getElementById('product-container').innerHTML = "<p>Product not found.</p>";
+    return;
   }
+
+  const container = document.getElementById('product-container');
+  container.innerHTML = `
+    <div class="product-image">
+      <img src="${product.image}" alt="${product.name}">
+    </div>
+    <div class="product-info">
+      <h1>${product.name}</h1>
+      <p>${product.description || 'No description available.'}</p>
+      <p><strong>Price: $${(product.price/100).toFixed(2)}</strong></p>
+      <button class="btn" onclick="addToCart('${product.id}')">Add to Cart</button>
+      <button class="btn" onclick="buyNow('${product.id}')">Buy Now</button>
+    </div>
+  `;
+}
+
+// Add to cart
+function addToCart(productId){
+  const product = allProducts.find(p => p.id === productId);
+  if(!product) return;
+
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const existing = cart.find(i => i.id === productId);
+  if(existing) existing.quantity++;
+  else cart.push({id: product.id, name: product.name, price: product.price/100, quantity:1, image: product.image});
+  localStorage.setItem("cart", JSON.stringify(cart));
+  alert(`${product.name} added to cart!`);
+  updateCartCount();
+}
+
+// Buy now
+function buyNow(productId){
+  addToCart(productId);
+  window.location.href = 'cart.html';
+}
+
+// Update cart counter
+function updateCartCount(){
+  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const total = cart.reduce((sum,i) => sum + i.quantity, 0);
+  document.getElementById("cart-count").textContent = total;
+}
+
+updateCartCount();
 </script>
+
+</body>
+</html>
