--- a/product.html
+++ b/product.html
@@ -5,119 +5,188 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Product Page</title>
 <style>
-  /* 🌐 Base Styles */
-  body { 
-    font-family: "Helvetica Neue", Arial, sans-serif; 
-    margin: 0; 
-    background: #fafafa; 
+  /* 🌐 Global Styles */
+  html, body {
+    overflow-x: hidden; /* prevent horizontal scroll */
+    width: 100vw;
+  }
+
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background: #f6f6f6;
     color: #333;
+    padding-top: 60px; /* space for fixed header */
   }
 
-  /* 🔝 Sticky Header */
-  .header { 
-    position: sticky; 
-    top: 0; 
-    background: #fff; 
-    padding: 12px 20px; 
-    display: flex; 
-    align-items: center; 
-    justify-content: space-between;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.08); 
+  /* Header */
+  .header {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
     z-index: 1000;
+    background: #fff;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   }
-  .logo { 
-    font-weight: bold; 
-    font-size: 1.2rem; 
-    text-decoration: none; 
-    color: #222; 
+
+  .header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 8px 16px;
+    box-sizing: border-box;
   }
-  .cart { 
-    position: relative; 
-    font-size: 1.4rem; 
-    text-decoration: none;
-    color: #444;
+
+  .logo { font-weight: bold; font-size: 20px; text-decoration: none; color: #111; flex-shrink:0; }
+  .hamburger { display: none; flex-direction: column; justify-content: space-between; height: 18px; cursor: pointer; }
+  .hamburger span { display: block; height: 2px; width: 25px; background: #111; border-radius: 2px; }
+
+  .search-bar {
+    flex: 1;
+    max-width: 60%;
+    min-width: 0;
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
   }
-  #cart-count { 
-    position: absolute; 
-    top: -8px; 
-    right: -10px; 
-    background: #f1641e; 
-    color: #fff; 
-    border-radius: 50%; 
-    padding: 2px 7px; 
-    font-size: 12px; 
+
+  .cart, .liked-icon { width: 32px; height: 32px; flex-shrink:0; }
+  .cart img, .liked-icon img { width: 100%; height: 100%; }
+
+  /* Product Section */
+  .product-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px auto;
+    max-width: 100%;
+    width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+  }
+
+  .product-image-wrapper {
+    width: 100%;
+    position: relative;
+  }
+  #product-image {
+    width: 100%;
+    border-radius: 10px;
+    max-width: 100%;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    margin-bottom: 15px;
+    display: block;
+  }
+  .heart.always {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 36px; height: 36px;
+    background: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  }
+
+  /* Price & Title */
+  #product-price {
+    font-size: 36px; /* 50% bigger */
     font-weight: bold;
+    color: #111;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 10px;
+  }
+  #product-name {
+    font-size: 22px;
+    font-weight: normal;
+    margin-bottom: 20px;
+    text-align: left;
+    width: 100%;
   }
 
-  /* 🛍️ Product Container */
-  .product-container { 
-    max-width: 1000px; 
-    margin: 40px auto; 
-    background: #fff; 
-    padding: 30px; 
-    border-radius: 12px; 
-    display: flex; 
-    gap: 30px; 
-    flex-wrap: wrap; 
-    box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+  /* Buttons */
+  .btn {
+    width: 100%;
+    padding: 16px;
+    margin-bottom: 12px;
+    font-size: 18px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: 0.3s;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+  .add-to-cart {
+    background: #f1641e;
+    color: #fff;
+  }
+  .add-to-cart:hover { background: #d9550e; }
+  .checkout-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background: #ff8c42;
+    color: #fff;
+  }
+  .checkout-btn:hover { background: #e57a25; }
+  .checkout-btn img { width: 24px; height: 24px; }
+
+  /* Checkout Wrapper */
+  .checkout-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  select#payment-method {
+    padding: 14px;
+    border-radius: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    appearance: none;
   }
 
-  /* 📸 Image */
-  .product-image { 
-    flex: 1; 
-    min-width: 280px; 
+  /* Description */
+  .details {
+    max-width: 100%;
+    margin: 20px auto 60px;
+    padding: 20px;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    box-sizing: border-box;
   }
-  .product-image img { 
-    width: 100%; 
-    border-radius: 10px; 
-    box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-    transition: transform 0.2s ease; 
-  }
-  .product-image img:hover { 
-    transform: scale(1.02); 
+  .details h2 { font-size: 22px; margin-bottom: 10px; }
+  .details p { font-size: 16px; line-height: 1.6; color: #555; }
+
+  @media (max-width: 480px) {
+    #product-price { font-size: 32px; }
+    #product-name { font-size: 20px; }
+    .btn { font-size: 16px; padding: 14px; border-radius: 25px; }
+    .hamburger { display: flex; }
   }
 
-  /* ℹ️ Info */
-  .product-info { 
-    flex: 2; 
-    min-width: 280px; 
-  }
-  .product-info h1 { 
-    margin: 0 0 10px; 
-    font-size: 2rem; 
-    font-weight: 600;
-  }
-  .product-info p { 
-    line-height: 1.6; 
-    margin-bottom: 15px; 
-  }
-  .product-info strong { 
-    font-size: 1.2rem; 
-    color: #222;
+/* Desktop: keep content centered and not too wide */
+@media (min-width: 769px) {
+  .product-container,
+  .details {
+    max-width: 800px;   /* narrower on desktop */
+    margin: 20px auto;  /* center horizontally */
   }
 
-  /* 🔘 Buttons */
-  .btn { 
-    display: inline-block; 
-    padding: 12px 20px; 
-    margin-top: 12px; 
-    margin-right: 10px;
-    background: #f1641e; 
-    color: #fff; 
-    border: none; 
-    border-radius: 8px; 
-    cursor: pointer; 
-    font-size: 1rem; 
-    font-weight: 500; 
-    transition: background 0.2s ease, transform 0.15s ease;
+  .search-bar {
+    max-width: 300px;   /* search bar doesn’t stretch across huge screens */
   }
-  .btn:hover { 
-    background: #d95512; 
-    transform: translateY(-2px); 
-  }
-  .btn:active { 
-    transform: translateY(0); 
-  }
+}
 </style>
 </head>
 <body>
