--- a/product.html
+++ b/product.html
@@ -19,28 +19,24 @@
     padding-top: 60px; /* space for fixed header */
   }
 
-  /* Header */
-  .header {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    z-index: 1000;
-    background: #fff;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  }
-
-  .header .container {
-    display: flex;
-    align-items: center;
+  /* 🔝 Sticky Header */
+  .header { 
+    position: sticky; 
+    top: 0; 
+    background: #fff; 
+    padding: 12px 20px; 
+    display: flex; 
+    align-items: center; 
     justify-content: space-between;
-    gap: 10px;
-    padding: 8px 16px;
-    box-sizing: border-box;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.08); 
+    z-index: 1000;
   }
-
-  .logo { font-weight: bold; font-size: 20px; text-decoration: none; color: #111; flex-shrink:0; }
-  .hamburger { display: none; flex-direction: column; justify-content: space-between; height: 18px; cursor: pointer; }
-  .hamburger span { display: block; height: 2px; width: 25px; background: #111; border-radius: 2px; }
+  .logo { 
+    font-weight: bold; 
+    font-size: 1.2rem; 
+    text-decoration: none; 
+    color: #222; 
+  }
 
   .search-bar {
     flex: 1;
