--- a/product.html
+++ b/product.html
@@ -5,18 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Product Page</title>
 <style>
-  /* 🌐 Global Styles */
-  html, body {
-    overflow-x: hidden; /* prevent horizontal scroll */
-    width: 100vw;
-  }
-
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    background: #f6f6f6;
+   /* 🌐 Base Styles */
+  body { 
+    font-family: "Helvetica Neue", Arial, sans-serif; 
+    margin: 0; 
+    background: #fafafa; 
     color: #333;
-    padding-top: 60px; /* space for fixed header */
   }
 
   /* 🔝 Sticky Header */
@@ -37,19 +31,23 @@
     text-decoration: none; 
     color: #222; 
   }
-
-  .search-bar {
-    flex: 1;
-    max-width: 60%;
-    min-width: 0;
-    padding: 8px 12px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 14px;
+  .cart { 
+    position: relative; 
+    font-size: 1.4rem; 
+    text-decoration: none;
+    color: #444;
   }
-
-  .cart, .liked-icon { width: 32px; height: 32px; flex-shrink:0; }
-  .cart img, .liked-icon img { width: 100%; height: 100%; }
+  #cart-count { 
+    position: absolute; 
+    top: -8px; 
+    right: -10px; 
+    background: #f1641e; 
+    color: #fff; 
+    border-radius: 50%; 
+    padding: 2px 7px; 
+    font-size: 12px; 
+    font-weight: bold;
+  }
 
   /* Product Section */
   .product-container {
