--- a/cart.html
+++ b/cart.html
@@ -5,8 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cart</title>
 <style>
-body{font-family:Arial,sans-serif;margin:0;background:#f6f6f6;}
-.header{padding:10px;background:#fff;display:flex;align-items:center;gap:10px;box-shadow:0 2px 6px rgba(0,0,0,0.1);}
+body { font-family: "Helvetica Neue", Arial, sans-serif; margin: 0; background: #fafafa; color: #333; }
+
+/* 🔝 Sticky Header */
+.header { position: sticky; top: 0; background: #fff; padding: 12px 20px; display: flex; align-items: center; justify-content: space-between; box-shadow: 0 2px 6px rgba(0,0,0,0.08); z-index: 1000; }
+
+.logo { font-weight: bold; font-size: 1.2rem; text-decoration: none; color: #222; }
+
+.cart { position: relative; font-size: 1.4rem; text-decoration: none; color: #444; }
+
+#cart-count { position: absolute; top: -8px; right: -10px; background: #f1641e; color: #fff; border-radius: 50%; padding: 2px 7px; font-size: 12px; font-weight: bold; }
+
 table{width:100%;border-collapse:collapse;margin-top:10px;}
 th,td{padding:8px;border-bottom:1px solid #ddd;text-align:center;}
 .quantity-btn{padding:4px 8px;background:#f1641e;color:#fff;border:none;border-radius:4px;cursor:pointer;}
