--- a/index.html
+++ b/index.html
@@ -50,21 +50,25 @@
 
   /* 🛍 Product Grid */
   .products {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 per row on desktop */
-    gap: 15px;
-    margin: 15px;
-  }
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 per row */
+  gap: 20px;
+  margin: 20px auto;
+  max-width: 1400px; /* keeps the grid from being too wide */
+  justify-content: center;
+}
 
-  .card {
-    background: #fff;
-    padding: 10px;
-    border-radius: 8px;
-    box-sizing: border-box;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  }
+.card {
+  background: #fff;
+  padding: 10px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  max-width: 300px; /* 👈 keeps each card smaller */
+  margin: 0 auto;
+}
 
   .card img {
     width: 100%;
