--- a/index.html
+++ b/index.html
@@ -50,39 +50,54 @@
 
   /* 🛍 Product Grid */
   .products {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 per row */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
     margin: 20px auto;
-    max-width: 1400px; /* keeps the grid from being too wide */
-    justify-content: center;
   }
 
+  /* 🟣 Uiverse.io Card Style */
   .card {
-    background: #fff;
-    padding: 10px;
-    border-radius: 8px;
-    box-sizing: border-box;
+    --card-bg: #ffffff;
+    --card-accent: #7c3aed;
+    --card-text: #1e293b;
+    --card-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
+
+    width: 190px;
+    height: 254px;
+    background: var(--card-bg);
+    border-radius: 20px;
     position: relative;
+    overflow: hidden;
+    transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+    box-shadow: var(--card-shadow);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, sans-serif;
     display: flex;
     flex-direction: column;
-    max-width: 300px; /* 👈 keeps each card smaller */
-    margin: 0 auto;
   }
 
-  .card img {
-    width: 100%;
-    border-radius: 6px;
-  }
+  .card__shine { position: absolute; inset: 0; background: linear-gradient(120deg, rgba(255,255,255,0) 40%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 60%); opacity: 0; transition: opacity 0.3s ease; }
+  .card__glow { position: absolute; inset: -10px; background: radial-gradient(circle at 50% 0%, rgba(124,58,237,0.3) 0%, rgba(124,58,237,0) 70%); opacity: 0; transition: opacity 0.5s ease; }
 
-  .card .heart {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    cursor: pointer;
-  }
+  .card__content { padding: 1.25em; height: 100%; display: flex; flex-direction: column; gap: 0.75em; position: relative; z-index: 2; }
 
-  /* 🟢 Uiverse.io Button Style */
+  .card__badge { position: absolute; top: 12px; right: 12px; background: #10b981; color: white; padding: 0.25em 0.5em; border-radius: 999px; font-size: 0.7em; font-weight: 600; transform: scale(0.8); opacity: 0; transition: all 0.4s ease 0.1s; }
+
+  .card__image { width: 100%; height: 100px; background: linear-gradient(45deg, #a78bfa, #8b5cf6); border-radius: 12px; transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1); position: relative; overflow: hidden; }
+  .card__image::after { content: ""; position: absolute; inset: 0; background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.1) 0%, transparent 30%), repeating-linear-gradient(45deg, rgba(139,92,246,0.1) 0px, rgba(139,92,246,0.1) 2px, transparent 2px, transparent 4px); opacity: 0.5; }
+
+  .card__text { display: flex; flex-direction: column; gap: 0.25em; }
+  .card__title { color: var(--card-text); font-size: 1.1em; margin: 0; font-weight: 700; transition: all 0.3s ease; }
+  .card__description { color: var(--card-text); font-size: 0.75em; margin: 0; opacity: 0.7; transition: all 0.3s ease; }
+
+  .card__footer { display: flex; justify-content: space-between; align-items: center; margin-top: auto; }
+
+  .card__price { color: var(--card-text); font-weight: 700; font-size: 1em; transition: all 0.3s ease; }
+
+  /* Uiverse.io Add to Cart Button */
   button {
     --button_radius: 0.75em;
     --button_color: #e8e8e8;
@@ -93,37 +108,29 @@
     cursor: pointer;
     border-radius: var(--button_radius);
     background: var(--button_outline_color);
-    width: 100%;
-    margin-top: auto;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    transition: all 0.3s ease;
   }
+  .button_top { display: block; width: 100%; height: 100%; text-align: center; color: white; transform: scale(0.9); transition: all 0.3s ease; }
+  button:hover .button_top { transform: scale(1); }
+  button:active .button_top { transform: scale(0.95); }
 
-  .button_top {
-    display: block;
-    box-sizing: border-box;
-    border: 2px solid var(--button_outline_color);
-    border-radius: var(--button_radius);
-    padding: 0.75em 1.5em;
-    background: var(--button_color);
-    color: var(--button_outline_color);
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-    text-align: center;
-  }
+  /* Hover Effects */
+  .card:hover { transform: translateY(-10px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04); border-color: rgba(124,58,237,0.2); }
+  .card:hover .card__shine { opacity: 1; animation: shine 3s infinite; }
+  .card:hover .card__glow { opacity: 1; }
+  .card:hover .card__badge { transform: scale(1); opacity: 1; z-index: 1; }
+  .card:hover .card__image { transform: translateY(-5px) scale(1.03); box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); }
+  .card:hover .card__title { color: var(--card-accent); transform: translateX(2px); }
+  .card:hover .card__description { opacity: 1; transform: translateX(2px); }
+  .card:hover .card__price { color: var(--card-accent); transform: translateX(2px); }
 
-  button:hover .button_top {
-    transform: translateY(-0.33em);
-  }
-
-  button:active .button_top {
-    transform: translateY(0);
-  }
-
-  /* 📱 Mobile: 2 per row */
-  @media (max-width: 768px) {
-    .products {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
+  @keyframes shine { 0% { background-position: -100% 0; } 100% { background-position: 200% 0; } }
 </style>
 </head>
 <body>
@@ -140,27 +147,29 @@ let allProducts = [];
 
 // Load products and render grid
 fetch('products.json')
-  .then(res=>res.json())
-  .then(products=>{
+  .then(res => res.json())
+  .then(products => {
     allProducts = products;
     const grid = document.getElementById('product-grid');
-    products.forEach(p=>{
+    products.forEach(p => {
       const card = document.createElement('div');
       card.className = 'card';
       card.innerHTML = `
-        <div class="heart" onclick="toggleLike('${p.id}', this)">♡</div>
-        <a href="product.html?id=${p.id}">
-          <img src="${p.image}" alt="${p.name}">
-          <h3>${p.name}</h3>
-        </a>
-        <p>$${(p.price/100).toFixed(2)}</p>
-        <button onclick="addToCart('${p.id}')">
-          <span class="button_top">Add to Cart</span>
-        </button>
+        <div class="card__shine"></div>
+        <div class="card__glow"></div>
+        <div class="card__content">
+          <div class="card__image"><img src="${p.image}" alt="${p.name}" style="width:100%; height:100%; border-radius:12px;"></div>
+          <div class="card__text">
+            <h3 class="card__title">${p.name}</h3>
+            <p class="card__description">$${(p.price/100).toFixed(2)}</p>
+          </div>
+          <div class="card__footer">
+            <button onclick="addToCart('${p.id}')"><span class="button_top">+</span></button>
+          </div>
+        </div>
       `;
       grid.appendChild(card);
     });
-    restoreLikedHearts();
   });
 
 // Add to cart
@@ -183,24 +192,6 @@ function updateCartCount(){
   document.getElementById("cart-count").textContent = total;
 }
 updateCartCount();
-
-// Likes
-function toggleLike(id, el){
-  let liked = JSON.parse(localStorage.getItem("likedItems")) || [];
-  if(liked.includes(id)){ liked = liked.filter(i=>i!==id); el.textContent="♡"; }
-  else { liked.push(id); el.textContent="♥"; }
-  localStorage.setItem("likedItems", JSON.stringify(liked));
-}
-function restoreLikedHearts(){
-  let liked = JSON.parse(localStorage.getItem("likedItems")) || [];
-  document.querySelectorAll(".card").forEach(card=>{
-    const heart = card.querySelector(".heart");
-    const link = card.querySelector("a");
-    if(!heart||!link) return;
-    const id = new URL(link.href).searchParams.get("id");
-    if(liked.includes(id)) heart.textContent="♥";
-  });
-}
 </script>
 </body>
 </html>
