--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     margin: 20px auto;
   }
 
-  /* 🟣 Uiverse.io Card Style */
+  /* 🟣 Card Style with Uiverse.io Effects */
   .card {
     --card-bg: #ffffff;
     --card-accent: #7c3aed;
     --card-text: #1e293b;
     --card-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
 
-    width: 190px;
-    height: 254px;
+    width: 250px;       /* old card width */
+    height: 300px;      /* old card height */
     background: var(--card-bg);
     border-radius: 20px;
     position: relative;
@@ -93,11 +93,11 @@
   .card__title { color: var(--card-text); font-size: 1.1em; margin: 0; font-weight: 700; transition: all 0.3s ease; }
   .card__description { color: var(--card-text); font-size: 0.75em; margin: 0; opacity: 0.7; transition: all 0.3s ease; }
 
-  .card__footer { display: flex; justify-content: space-between; align-items: center; margin-top: auto; }
+  .card__footer { display: flex; justify-content: center; align-items: center; margin-top: auto; }
 
   .card__price { color: var(--card-text); font-weight: 700; font-size: 1em; transition: all 0.3s ease; }
 
-  /* Uiverse.io Add to Cart Button */
+  /* 🟡 Uiverse.io Add to Cart Button */
   button {
     --button_radius: 0.75em;
     --button_color: #e8e8e8;
@@ -108,15 +108,15 @@
     cursor: pointer;
     border-radius: var(--button_radius);
     background: var(--button_outline_color);
-    width: 28px;
-    height: 28px;
+    width: 100%;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: auto;
     transition: all 0.3s ease;
   }
-  .button_top { display: block; width: 100%; height: 100%; text-align: center; color: white; transform: scale(0.9); transition: all 0.3s ease; }
+
+  .button_top { display: block; width: 100%; text-align: center; color: white; transform: scale(0.9); transition: all 0.3s ease; }
   button:hover .button_top { transform: scale(1); }
   button:active .button_top { transform: scale(0.95); }
 
@@ -131,6 +131,14 @@
   .card:hover .card__price { color: var(--card-accent); transform: translateX(2px); }
 
   @keyframes shine { 0% { background-position: -100% 0; } 100% { background-position: 200% 0; } }
+
+  /* 📱 Mobile: 2 per row */
+  @media (max-width: 768px) {
+    .products {
+      justify-content: center;
+      gap: 15px;
+    }
+  }
 </style>
 </head>
 <body>
@@ -164,7 +172,7 @@ fetch('products.json')
             <p class="card__description">$${(p.price/100).toFixed(2)}</p>
           </div>
           <div class="card__footer">
-            <button onclick="addToCart('${p.id}')"><span class="button_top">+</span></button>
+            <button onclick="addToCart('${p.id}')"><span class="button_top">Add to Cart</span></button>
           </div>
         </div>
       `;
