--- a/index.html
+++ b/index.html
@@ -54,16 +54,15 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     display: flex;
     flex-direction: column;
-    aspect-ratio: 5/6; /* keeps consistent aspect ratio */
   }
 
   .card__shine { position: absolute; inset: 0; background: linear-gradient(120deg, rgba(255,255,255,0) 40%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 60%); opacity: 0; transition: opacity 0.3s ease; }
   .card__glow { position: absolute; inset: -10px; background: radial-gradient(circle at 50% 0%, rgba(124,58,237,0.3) 0%, rgba(124,58,237,0) 70%); opacity: 0; transition: opacity 0.5s ease; }
 
-  .card__content { padding: 1.25em; height: 100%; display: flex; flex-direction: column; gap: 0.75em; position: relative; z-index: 2; }
+  .card__content { padding: 1.25em; display: flex; flex-direction: column; gap: 0.75em; position: relative; z-index: 2; flex: 1 1 auto; }
 
-  .card__image { width: 100%; flex-shrink: 0; border-radius: 12px; overflow: hidden; }
-  .card__image img { width: 100%; height: auto; object-fit: cover; display: block; }
+  .card__image { width: 100%; flex-shrink: 0; border-radius: 12px; overflow: hidden; max-height: 140px; }
+  .card__image img { width: 100%; height: 100%; object-fit: cover; display: block; }
 
   .card__text { display: flex; flex-direction: column; gap: 0.25em; }
   .card__title { color: var(--card-text); font-size: 1.1em; margin: 0; font-weight: 700; transition: all 0.3s ease; }
